# lang-nonlin

./: PROJECT_OVERVIEW.md  README.md  langmuir_nonlinear_cl_implementation.md  langmuir_responsiveness.md  pyproject.toml
data/era5_cache/: 31p183_120p299_20180310_20180408.json  31p183_120p299_20180409_20180419.json  31p183_120p299_20180417_20180421.json  31p183_120p299_20180420_20180519.json  31p207_120p263_20200910_20201009.json  31p207_120p263_20201010_20201020.json  31p207_120p263_20201018_20201022.json  31p207_120p263_20201021_20201119.json  31p234_120p138_20200702_20200731.json  (+259 more)
langmuir/: __init__.py  colony_accumulation.py  era5.py  galerkin.py  linear_solver.py  nonlinear_solver.py  open_meteo_client.py  params.py  profiles.py  rayleigh_mapping.py  resolvent_spectrum.py  robin_bc.py  timeline_analysis.py  tuning.py  utils.py  validation.py  weather.py
plots/: bloom_feedback_analysis.py  development_before_after_analysis.py  development_before_after_summary.json  diagnostic_plots.py  hybrid_decomposition_plots.py  hybrid_decomposition_summary.json  key_findings_plots.py  key_findings_summary.json  output_locator.py  responsiveness_diagnostics_plots.py  responsiveness_diagnostics_summary.json  weather_by_location_class_analysis.py  weather_by_location_class_summary.csv  weather_by_location_class_summary.json
spacing_langmuir/: __init__.py  config.py  era5.py  run.py  stability.py  validation.py  weather.py  wind_forcing.py
tests/: conftest.py  test_accumulation.py  test_linear_solver.py  test_params.py  test_validation.py
(+274 files in other folders)
