[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacing-langmuir"
version = "0.1.0"
description = "Minimal Langmuir spacing prediction and ERA5/Open-Meteo validation workflow."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
]

[tool.setuptools.packages.find]
include = ["spacing_langmuir*"]
