[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langmuir"
version = "0.1.0"
description = "Nonlinear Craik-Leibovich Langmuir circulation model for shallow lakes."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["langmuir*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
